--- a/styles.css
+++ b/styles.css
@@ -1,137 +1,104 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: "montesserat",sans-serif;
 }
 
-.body-content {
-    width: 100%;
-    padding: 20px;
-    text-align: justify;
-    box-sizing: border-box;
-    font-size: 18px;
-    line-height: 40px;
+.header {
+    height: 100px;
+    background: #34495e;
+    padding: 0 20px;
+    color: #fff;
 }
 
-.footer {
-    width: 100%;
-    background: #00121b;
-    display: block;
-}
-
-.inner-footer {
-    width: 95%;
-    margin: auto;
-    padding: 30px 10px;
-    display: flex;
-    flex-wrap: wrap;
-    box-sizing: border-box;
-    justify-content: center;
-}
-
-.footer-items {
-    width: 25%;
-    padding: 10px 20px;
-    box-sizing: border-box;
-}
-
-h1 {
-    padding: 10px 0;
-    font-size: 25px;
-    color: red;
+.logo {
+    line-height: 100px;
+    float: left;
     text-transform: uppercase;
 }
 
-.footer-items p {
-    color: white;
-    font-size: 16px;
-    text-align: justify;
-    line-height: 20px;
-    word-spacing: normal;
+.menu {
+    float: right;
+    line-height: 100px;
 }
 
-h2 {
-    margin: 10px 0;
-    color: gray;
-    font-size: 16px;
-    font-weight: lighter;
+.menu a {
+    color: #fff;
     text-transform: uppercase;
-}
-
-.border {
-    height: 2px;
-    width: 40px;
-    background: #ff9800;
-}
-
-ul {
-    list-style: none;
-    color: #fff;
-    font-size: 15px;
-    letter-spacing: 0.5px;
-}
-
-ul a {
     text-decoration: none;
-    outline: none;
-    color: #fff;
-    transition: 0.3s;
+    padding: 0px;
+    transition: 0.4s;
 }
 
-ul a:hover {
-    color: #ff9800;
+.show-menu-btn,.hide-menu-btn {
+    transition: 0.4s; 
+    font-size: 30px;
+    cursor: pointer;
+    display: none;
 }
 
-ul li {
-    margin: 10px 0;
-    height: 25px;
+.show-menu-btn {
+    float: right;
 }
 
-li i {
-    margin-right: 25px;
+.show-menu-btn i {
+    line-height: 100px;
 }
 
-.social-media {
+.menu a:hover,.show-menu-btn:hover,.hide-menu-btn:hover{
+    color: #3498db;
+}
+
+#chk {
+    position: absolute;
+    visibility: hidden;
+    z-index: -1111;
+}
+
+.content {
+    padding: 0 20px;
+}
+
+.content img {
     width: 100%;
-    color: #fff;
-    text-align: center;
+    max-width: 700px;
+    margin: 20px 0;
 }
 
-.social-media a {
-    text-decoration: none;
+.content p {
+    text-align: justify;
 }
 
-.social-media i {
-    height: 15px;
-    width: 15px;
-    margin: 20px 5px;
-    padding: 10px;
-    color: red;
-    border-radius: 50%;
-    border: 1px solid red;
-    transition: 0.3s;
-}
-
-.social-media i:hover {
-    background: grey;
-}
-
-.footer-bottom {
-    padding: 10px;
-    background: #3d545f;
-    color: #fff;
-    font-size: 12px;
-    text-align: center;
-} 
-
-@media screen and (max-width: 1085px){
-    .footer-items {
-        width: 50%;
+@media screen and (max-width:800px) {
+    .show-menu-btn,.hide-menu-btn {
+        display: block;
     }
-}
 
-@media screen and (max-width: 600px){
-    .footer-items {
+    .menu {
+        position: fixed;
         width: 100%;
+        height: 100vh;
+        background: #333;
+        right: -100%;
+        top: 0;
+        text-align: center;
+        padding: 80px 0;
+        line-height: normal;
+        transition: 0.7s;
+    }
+
+    .menu a {
+        display: block;
+        padding: 20px;
+    }
+
+    .hide-menu-btn {
+        position: absolute;
+        top: 40px;
+        right: 40px;
+    }
+
+    #chk:checked ~ .menu {
+        right: 0;
     }
 }
