--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "montesserat",sans-serif;
+    font-family: 'Montserrat',sans-serif;
+    box-sizing: border-box;
 }
 
 .header {
@@ -15,6 +16,8 @@
     line-height: 100px;
     float: left;
     text-transform: uppercase;
+    font-size: 35px;
+    padding-left: 30px;
 }
 
 .menu {
@@ -26,7 +29,7 @@
     color: #fff;
     text-transform: uppercase;
     text-decoration: none;
-    padding: 0px;
+    padding: 20px;
     transition: 0.4s;
 }
 
@@ -69,6 +72,33 @@
     text-align: justify;
 }
 
+.contact-info {
+    display: flex;
+    width: 100%;
+    max-width: 1200px;
+    align-items: center;
+    justify-content: center;
+    padding-top: 30px;
+}
+
+.team-heading {
+    padding: 20px;
+}
+
+.emma {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.card {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 @media screen and (max-width:800px) {
     .show-menu-btn,.hide-menu-btn {
         display: block;
@@ -100,5 +130,10 @@
 
     #chk:checked ~ .menu {
         right: 0;
+    }
+
+    .contact-info {
+        display: flex;
+        flex-direction: column;
     }
 }
